# rust_on_stm32_notebook

./: .gitattributes  .gitignore  Cargo.toml  README.adoc  _setupenv.ps1  memory.x  openocd.cfg
.cargo/: config.toml
s01_rcc/: Cargo.toml  build.rs  memory.x
s02_exti/: Cargo.toml  build.rs
s03_spi/: Cargo.toml
s04_i2c/: Cargo.toml
s05_usart/: Cargo.toml
s06_tim/: Cargo.toml  build.rs
s07_rtc/: Cargo.toml  build.rs
s08_dma/: Cargo.toml  memory.x
s09_adc/: Cargo.toml  memory.x
s10_systick/: Cargo.toml  memory.x
s11_lcd1602/: Cargo.toml  README.adoc  memory.x
s12_defmt/: Cargo.toml  build.rs
s12_lcd1602_hal/: Cargo.toml
s12_lcd1602_hal/src/lcd1602-hal/: impl_animation.rs  impl_ext.rs  impl_lcd_api.rs  impl_pin_interaction.rs  impl_struct_api.rs  mod.rs
s12_lcd1602_hal/src/lcd1602-hal/builder/: impl_builder_api.rs  mod.rs
s12_lcd1602_hal/src/lcd1602-hal/command_set/: mod.rs
s12_lcd1602_hal/src/lcd1602-hal/pins/: impl_crate_level_api.rs  impl_internal_api.rs  impl_pins_api.rs  mod.rs
s12_lcd1602_hal/src/lcd1602-hal/utils/: impls.rs  mod.rs
s12_lcd1602_hal/src/lcd1602_hal/: impl_animation.rs  impl_ext.rs  impl_lcd_api.rs  impl_pin_interaction.rs  impl_struct_api.rs  mod.rs
s12_lcd1602_hal/src/lcd1602_hal/builder/: impl_builder_api.rs  mod.rs
s12_lcd1602_hal/src/lcd1602_hal/full_command/: impl_from_command_set.rs
s12_lcd1602_hal/src/lcd1602_hal/pins/: impl_crate_level_api.rs  impl_internal_api.rs  impl_pins_api.rs  mod.rs
s12_lcd1602_hal/src/lcd1602_hal/utils/: mod.rs
s12_lcd1602_hal/src/lib/: command_set.rs  full_command.rs  lcd.rs  lcd_builder.rs  lcd_builder_traits.rs  lcd_pins.rs  lcd_pins_traits.rs  lcd_traits.rs  lib.rs  utils.rs
s12_lcd1602_hal/src/lib/lcd/: impl_animation.rs  impl_ext.rs  impl_lcd_api.rs  impl_pin_interaction.rs  impl_struct_api.rs  mod.rs
s12_lcd1602_hal/src/lib/lcd/builder/: impl_builder_api.rs  mod.rs
s12_lcd1602_hal/src/lib/lcd/command_set/: mod.rs
s12_lcd1602_hal/src/lib/lcd/full_command/: impl_from_command_set.rs  impl_full_command_api.rs  mod.rs
s12_lcd1602_hal/src/lib/lcd/pins/: impl_crate_level_api.rs  impl_internal_api.rs  impl_pins_api.rs  mod.rs
s13_usb/: Cargo.toml  build.rs
s13_usb/_note/: minimal_usb_request.adoc
s13_usb/host_side_app/: Cargo.toml  README.adoc
s14_flash/: embedded_flash.adoc
s15_crc/: Cargo.toml
s16_watchdog/: Cargo.toml
s17_low_power/: Cargo.toml
s18_rng/: Cargo.toml
s19_quadspi/: Cargo.toml
s20_dac/: Cargo.toml
