[workspace]
members = [
    "s01_rcc",
    "s02_exti",
    "s03_spi",
    "s05_usart",
    "s06_tim",
    "s07_rtc",
    "s08_dma",
    "s09_adc",
    "s10_systick",
]

[workspace.package]
authors = ["eZio Pan"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
