[workspace]
resolver = "2"
members = [
    "s01_rcc",
    "s02_exti",
    "s03_spi",
    "s04_i2c",
    "s05_usart",
    "s06_tim",
    "s07_rtc",
    "s08_dma",
    "s09_adc",
    "s10_systick",
    "s11_lcd1602",
    "s12_defmt",
    "s13_usb",
    "s15_crc",
]

[workspace.package]
authors = ["eZio Pan"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
