[package]
name = "s01_rcc"
authors.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Cortex-M 运行时组件
cortex-m-rt = "*"

# STM32F4xx 系列片上外设的抽象层
# 特别指定了 STM32F413 作为具体的芯片
stm32f4xx-hal = { version = "*", features = ["stm32f413"] }

# 启用 RTT
rtt-target = { version = "*" }
# 将 panic 信息通过 RTT 传递给主机
panic-rtt-target = { version = "*" }
