[package]
name = "s02_exti"
authors.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# 未备注部分见 s01 的 Cargo.toml 的说明

cortex-m = "*"
cortex-m-rt = "*"

# STM32F4xx 系列片上外设的抽象层
# 特别指定了 STM32F413 作为具体的芯片，并启用了对 rtic 的支持（以使用 cortex-m-rtic crate）
stm32f4xx-hal = { version = "*", features = ["stm32f413", "rtic"] }

rtt-target = { version = "*" }
panic-rtt-target = { version = "*" }

# 一个实时的、中断驱动的、并发框架
rtic = { version = "*", features = ["thumbv7-backend"] }
