[package]
name = "s03_spi"
authors.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# 未备注部分见 s01 的 Cargo.toml 的说明

cortex-m = "*"
cortex-m-rt = "*"

stm32f4xx-hal = { version = "*", features = ["stm32f413"] }

rtt-target = { version = "*", features = ["cortex-m"] }
panic-rtt-target = { version = "*", features = ["cortex-m"] }
