[package]
name = "s04_i2c"
authors.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# 未备注部分见 s01 的 Cargo.toml 的说明

cortex-m = "*"
cortex-m-rt = "*"

stm32f4xx-hal = { version = "*", features = ["stm32f413"] }

rtt-target = { version = "*" }
panic-rtt-target = { version = "*" }

# 由于我们使用了 hal 库，其需要我们引入一些通用的 trait，也就是 embedded-hal 这个非常有名的 crate 所提供的内容
embedded-hal = "1.0.0-rc.2"
