[package]
name = "s05_usart"
authors.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Cortex-M 内核抽象
cortex-m = "*"

# Cortex-M 运行时组件
cortex-m-rt = "*"

# STM32F4xx 系列片上外设的抽象层
# 特别指定了 STM32F411 作为具体的芯片
stm32f4xx-hal = { version = "*", features = ["stm32f411"] }

# 启用 RTT
rtt-target = { version = "*", features = ["cortex-m"] }
# 将 panic 信息通过 RTT 传递给主机
panic-rtt-target = { version = "*", features = ["cortex-m"] }

# 小巧的整数转 ASCII 字符串的库
itoa = "*"
