[package]
name = "s06_tim"
authors.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Cortex-M 内核抽象
cortex-m = "*"

# Cortex-M 运行时组件
cortex-m-rt = "*"

# STM32F4xx 系列片上外设的抽象层
# 特别指定了 STM32F412 作为具体的芯片
# PR #677 新增了对 TIM 计数器的写函数，可以方便我们修改 Encoder 的计数值
# 这里先 track git，等待下一次的 Release
stm32f4xx-hal = { git = "https://github.com/stm32-rs/stm32f4xx-hal", features = [
    "stm32f412",
] }

# 启用 RTT
rtt-target = { version = "*", features = ["cortex-m"] }
# 将 panic 信息通过 RTT 传递给主机
panic-rtt-target = { version = "*", features = ["cortex-m"] }
