[package]
name = "s06_tim"
authors.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# 未备注部分见 s01 的 Cargo.toml 的说明
cortex-m = "*"
cortex-m-rt = "*"

# PR #677 新增了对 TIM 计数器的写函数，可以方便我们修改 Encoder 的计数值
# 这里先 track git，等待下一次的 Release
stm32f4xx-hal = { git = "https://github.com/stm32-rs/stm32f4xx-hal", features = [
    "stm32f413",
] }

rtt-target = { version = "*", features = ["cortex-m"] }
panic-rtt-target = { version = "*", features = ["cortex-m"] }
