[package]
name = "s12_defmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "*"
stm32f4 = { version = "*", features = ["stm32f411"] }
defmt = "*"
defmt-rtt = "*"
panic-probe = { version = "*", features = ["print-defmt"] }
