[package]
name = "s12_lcd1602_hal"
authors.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lcd1602_hal"
path = "src/lcd1602_hal/mod.rs"

[dependencies]

# Cortex-M 运行时组件
cortex-m-rt = "*"

embedded-hal = "*"

# STM32F4xx 系列片上外设的抽象层
# 特别指定了 STM32F411 作为具体的芯片
stm32f4xx-hal = { version = "*", features = ["stm32f411"] }

# 启用 RTT
rtt-target = { version = "*", features = ["cortex-m"] }
# 将 panic 信息通过 RTT 传递给主机
panic-rtt-target = { version = "*", features = ["cortex-m"] }
