[package]
name = "s13_usb"
authors.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "*"
cortex-m-rt = "*"
stm32f4xx-hal = { version = "*", features = [
    "defmt",
    "usb_fs",
    "stm32f411",
    "rtic",
] }
defmt = "*"
defmt-rtt = "*"
panic-probe = { version = "*", features = ["print-defmt"] }
usb-device = { version = "*", features = ["defmt"] }
cortex-m-rtic = "*"
