[package]
name = "s99_watchdog"
authors.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "*"
cortex-m-rt = "*"
stm32f4xx-hal = { version = "*", features = ["stm32f413"] }

rtt-target = { version = "*" }
panic-rtt-target = { version = "*" }
