[package]
name = "s17_low_power"
authors.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "*", features = ["inline-asm"] }
cortex-m-rt = "*"
stm32f4xx-hal = { version = "*", features = ["stm32f413"] }

rtt-target = { version = "*" }
panic-rtt-target = { version = "*" }

panic-halt = "*"
